[package]
name = "ptree"
version = "0.1.0"
authors = ["Miha Čančula <miha@noughmad.eu>"]

[features]
default = ["path", "petgraph", "ansi", "serde"]
path = []
ansi = ["ansi_term", "isatty"]
serde = ["serde-value"]

[dependencies]
petgraph = { version = "0.4", optional = true }
ansi_term = { version = "0.11", optional = true }
isatty = { version = "0.1", optional = true }
serde-value = { version = "0.5", optional = true }

[dev-dependencies]
serde_any = "0.5"
structopt = "0.2"

[[example]]
name = "dirtree"
required-features = ["path"]

[[example]]
name = "petgraph"
required-features = ["petgraph"]

[[example]]
name = "serde"
required-features = ["serde", "ansi"]

[[example]]
name = "builder"
required-features = ["ansi"]
