[package]
name = "ptree"
version = "0.1.0"
authors = ["Miha Čančula <miha@noughmad.eu>"]
license = "MIT OR Apache-2.0"
description = "Pretty-print tree-like structures"
repository = "https://gitlab.com/Noughmad/ptree"
keywords = ["tree", "cli", "terminal"]
categories = ["command-line-interface"]
readme = "README.md"

[badges]
gitlab = { repository = "Noughmad/ptree", branch = "master" }
appveyor = { repository = "Noughmad/ptree", service = "gitlab" }
codecov = { repository = "Noughmad/ptree", service = "gitlab" }

[features]
default = ["path", "petgraph", "ansi", "serde"]
path = []
ansi = ["ansi_term", "isatty"]
serde = ["serde-value"]

[dependencies]
petgraph = { version = "0.4", optional = true }
ansi_term = { version = "0.11", optional = true }
isatty = { version = "0.1", optional = true }
serde-value = { version = "0.5", optional = true }

[dev-dependencies]
serde_any = "0.5"
structopt = "0.2"
version-sync = "0.5.0"

[[example]]
name = "dirtree"
required-features = ["path"]

[[example]]
name = "petgraph"
required-features = ["petgraph"]

[[example]]
name = "serde"
required-features = ["serde", "ansi"]

[[example]]
name = "builder"
required-features = ["ansi"]
