[package]
name = "ptree"
version = "0.3.2"
authors = ["Miha Čančula <miha@noughmad.eu>"]
license = "MIT OR Apache-2.0"
description = "Pretty-print tree-like structures"
repository = "https://gitlab.com/Noughmad/ptree"
keywords = ["tree", "cli", "terminal"]
categories = ["command-line-interface"]
readme = "README.md"

[badges]
gitlab = { repository = "Noughmad/ptree", branch = "master" }
appveyor = { repository = "Noughmad/ptree", service = "gitlab" }
codecov = { repository = "Noughmad/ptree", service = "gitlab" }

[features]
default = ["petgraph", "ansi", "conf", "value"]
ansi = ["ansi_term", "atty", "tint"]
conf = ["config", "directories"]
value = ["serde-value"]

[dependencies]
petgraph = { version = "0.6", optional = true }
ansi_term = { version = "0.12", optional = true }
atty = { version = "0.2", optional = true }
tint = { version = "1.0", optional = true }
serde-value = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.11", optional = true }
directories = { version = "4.0", optional = true }

[dev-dependencies]
serde_any = "0.5"
structopt = "0.3"
version-sync = "0.9.0"
lazy_static = "1.1"
tempfile = "3.0"

[[example]]
name = "basic"

[[example]]
name = "dirtree"

[[example]]
name = "builder"
required-features = ["ansi"]

[[example]]
name = "petgraph"
required-features = ["petgraph"]

[[example]]
name = "serde"
required-features = ["value", "ansi"]

